@@ -4,6 +4,9 @@
 - Fixed bug in mkcdimage that caused USB flash drive image to be
   damaged.
 
+- Fixed bug that could cause rEFInd since 0.11.5 to freeze on some
+  computers.
+
 0.13.3.1 (4/12/2022):
 ---------------------
 
